src/main/webapp/css/ic.css
/* ... */
#alert_text {
	font-size:0.55em;
	text-align:left;
}

#popup_title {
	font-size:0.65em;
	padding:10px 4px;
	background-color:#c6ff00;
	font-weight:normal;
	color:#8FAE22;
}

#popup_content ul li {
	font-size:0.55em;
}

#ic_logo h1 {
	color:#8fae22;
	font-size:1.8em;
	font-weight:normal;
	margin:0;
}

h1 {
	font-size:1em;
	margin:0;
	padding:0;
}

#annotation_holder h1, #messages_holder h1, #expandedView_holder h1 {
	font-weight:normal;
	text-transform:uppercase;
	font-size:0.85em;
	color:#8fae22;
	background-color:#c6ff00;
	padding:4px;
	margin: 0 0 0 -30px;
}

h2 {
	font-size:0.7em;
	font-weight:normal;
	margin:0 0 10px 0;
	padding:0;
	color:#c6ff00;
}

h3 {
	font-size:0.7em;
	font-weight:normal;
	margin:0;
	padding:0;
	color:#cccccc;
}

input.hinted {
	color:#cccccc;
}

input, input.focused {
	color:#444444;
}

#alert_holder h3 {
	color:#fff;
	font-size:1em;
	font-weight:normal;
}

#alert_holder p {
	color:#fff;
}

#alert_holder a.dismissal {
	color:#fff;
	font-size:0.6em;
	margin:0 2px;
}

#alert_holder input {
	margin:10px 2px 0 2px;
	width:96%;
}

#media_title {
	text-align:right;
}

p {
	font-size:0.5em;
}

#search_results_info p {
	font-size:0.8em;
	color:#ffffff;
	padding:0;
	margin:6px;
}

#ic_logo a:link, #ic_logo a:visited, #ic_logo a:hover, #ic_logo p {
	color:#ccc;
	text-decoration:none;
}

#ic_nav li {
	font-size:0.7em;
	text-transform:uppercase;
}

#ic_nav li a:link, #ic_nav li a:visited, #ic_nav li a:hover {
	text-decoration:none;
}

#ic_nav li a:link, #ic_nav li a:visited {
	color:#8fae22;
}

#ic_nav li.active a:link, #ic_nav li.active a:visited, #ic_nav li.active a:hover {
	color:#fff;
}

#ic_nav li a:hover {
	color:#fff;
}

#ic_login a, a.ic_inner_option, a.ic_inner_option:link, a.ic_inner_option:visited, a.ic_inner_option:hover, #annotation_append_submit, #annotation_append_submit:link, #annotation_append_submit:visited, #annotation_append_submit:hover, #messages_append_submit, #messages_append_submit:link, #messages_append_submit:visited, #messages_append_submit:hover, #ui_submissions a.ic_to_import, #ui_submissions a.ic_to_refresh, #ui_submissions a.ic_to_refresh:link, #ui_submissions a.ic_to_refresh:visited, #importer_dismissal a:hover {
	padding:4px 5px;
	background-color:#8fae22;
	cursor:pointer;
	color:#ffffff;
}

#annotation_append_submit, #messages_append_submit {
	font-size:0.6em;
}

a.ic_inner_option, a.ic_inner_option:link, a.ic_inner_option:visited, a.ic_inner_option:hover, #ui_submissions a.ic_to_import, #ui_submissions a.ic_to_refresh {
	font-size:0.6em;
}

#metadata_readout ul li, #map_view_annotations p, #map_view_annotations ul li {
	font-size:0.6em;
}

#ui_submissions a.ic_to_import, #ui_submissions a.ic_to_refresh {
	position:relative;
	top:-5px;
	left:4px;
}

#ui_submissions a.ic_to_refresh {
	margin-left:4px;
}

#metadata_readout ul li h3 {
	color:#c6ff00;
	font-weight:normal;
	font-size:1em;
	margin:6px 0;
	padding:0;
}

#metadata_readout ul li a, #metadata_readout ul li a:link, #metadata_readout ul li a:visited, #metadata_readout ul li a:hover, body a.informaLocationMarker, body a.informaLocationMarker:hover {
	color:#ffffff;
	text-decoration:underline;
	cursor:pointer;
}

#map_view_annotations p {
	margin:0;
	padding:0;
}

#ui_submissions table td {
	color:#444444;
	font-size:0.55em;
}

#ui_submissions table tr.tr_header td {
	color:#8FAE22;
	font-size:0.65em;
}

/*--------------------------------------
Lists & Tables*/
#popup_content ul {
	margin:0;
	padding:0;
	list-style-type:none;
}

#popup_content ul li {
	background-color:#cccccc;
	border:1px solid #444444;
	padding:4px;
	margin-bottom:4px;
	cursor:pointer;
}

#ic_nav {
	list-style-type:none;
	margin:0;
	padding:10px 30px;
	position:absolute;
	bottom:0;
	right:0;
	background-color:#c6ff00;
}

#ic_nav li {
	float:left;
	padding:0 10px;
}

#metadata_readout ul {
	margin:10px 0;
	padding:0;
	list-style-type:none;
}

#metadata_readout ul li, #map_view_annotations p {
	padding:1px 0;
	color:#ccc;
}

ul.ic_menu_button {
	list-style-type:none;
	margin:0;
	padding:0;
}

ul.ic_menu_button li {
	font-size:0.55em;
	float:left;
	padding:5px;
	background-color:#ccc;
	border:1px solid #444;
	margin:0 5px 0 0;
	text-align:center;
	cursor:pointer;
}

ul.ic_menu_button li a:link, ul.ic_menu_button li a:visited, ul.ic_menu_button li a:hover {
	color:#444444;
	text-decoration:none;
}

ul.ic_menu_button li div {
	display:none;
	position:absolute;
	margin:6px 0 0 -6px;
	padding:0;

}

ul.ic_menu_button li div ul {
	list-style-type:none;
	margin:0;
	padding:0;
	border:1px solid #444;
}

ul.ic_menu_button li div ul li {
	float:none;
	font-size:1em;
	text-align:left;
	border:none;
	margin:0;
}

ul.ic_menu_button li div ul li.hover {
	color:#ccc;
	background-color:#444;
}

ul.ic_menu_button li.ic_menu_buttonOverride {
	background-color:transparent;
	border:none;
	color:#fff;
	cursor:default;
}

#ui_submissions table tr {
	background-color:#cccccc;
}

#ui_submissions table td {
	border:1px solid #444444;
	padding:4px 12px;
}

#ui_submissions table tr.tr_header td {
	background-color:#C6FF00;
	cursor:pointer;
}

td.ic_toMedia {
	cursor:pointer;
}

#annotation_content ul, #messages_content ul {
	font-size:0.74em;
	list-style-type:none;
	padding:10px;
	margin:0;
}

#annotation_content ul li, #messages_content ul li {
	padding:0 6px;
	background-color:#ffffff;
	border:1px solid #C6FF00;
	margin:6px 0;
	border-radius:5px;
	-moz-border-radius:5px;
	-webkit-border-radius:5px;
}

#annotation_content ul li p, #messages_content ul li p {
	font-size:0.85em;
}

#annotation_content ul li p.date, #messages_content ul li p.date {
	font-size:0.7em;
	font-style:italic;
}

#annotation_content ul li p.date, #messages_content ul li p.date {
	color:#999999;
}

#annotation_content ul li.from_client p.date, #messages_content ul li.from_client p.date {
	color:#ffffff;
}

#map_view_annotations ul {
	list-style-type:none;
	padding:0;
	margin: 5px 0;
}
/* ... */

